syntax = "proto3";
package chat.chat;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "chat/params.proto";
import "chat/messages.proto";
// this line is used by starport scaffolding # 1

option go_package = "chat/x/chat/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/chat/chat/params";
  }
  // Queries a Messages by id.
	rpc Messages(QueryGetMessagesRequest) returns (QueryGetMessagesResponse) {
		option (google.api.http).get = "/chat/chat/messages/{id}";
	}

	// Queries a list of Messages items.
	rpc MessagesAll(QueryAllMessagesRequest) returns (QueryAllMessagesResponse) {
		option (google.api.http).get = "/chat/chat/messages";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetMessagesRequest {
	uint64 id = 1;
}

message QueryGetMessagesResponse {
	Messages Messages = 1 [(gogoproto.nullable) = false];
}

message QueryAllMessagesRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllMessagesResponse {
	repeated Messages Messages = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
